# emailTranslator

./: .gitignore  README.md  pyproject.toml
data/: example_emails.json
docs/: notes.md
emailTranslator/: __init__.py  agent.py  config.py  emailer.py  emails.py  llm.py  logger.py  main.py  models.py  safeguards.py  summariser.py
emailTranslator.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
scripts/: ask_anything  example_data.py  test_send_email.py
