[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "emailTranslator"
version = "0.1.0"
description = "LLM agent to translate and summarise emails"
authors = [{ name = "Pete Downs", email = "pete.downs@gmail.com"}]
license = { file = "LICENSE" }
readme = "README.md"
requires-python = ">=3.7"
dependencies = [
    "pyprojroot",
    "pydantic",
    "openai",
    "python-dotenv>=0.21.1",
    "fastapi>=0.103.2",
    "uvicorn>=0.22.0",
]

[tool.setuptools]
packages = ["emailTranslator"]
